<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/main_menu"/>

            <TextView
                android:id="@+id/contextView"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/context_menu_label"
                android:textSize="30sp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.widget.LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/original_name"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn_edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="editName"
                        android:text="@string/edit_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="239dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/show_msg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/show_msg_label"
                        android:textColor="#DC143C"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/show_hint"
                        android:layout_width="match_parent"
                        android:layout_height="63dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/show_hint_label_2"
                        android:textColor="#0000FF"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/attempts_left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/attempts_left_label_2"
                        android:textColor="#8A2BE2"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/edit_num"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:background="@drawable/back"
                        android:layout_width="match_parent"
                        android:layout_height="65dp" />

                </LinearLayout>

                <GridLayout
                    android:id="@+id/numberPad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:columnCount="3">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="1" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="2" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="3" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="4" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="5" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="6" />

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="7" />

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="8" />

                    <Button
                        android:id="@+id/button9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="9" />

                    <Button
                        android:id="@+id/button_clear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="@string/btn_clear_label" />

                    <Button
                        android:id="@+id/button0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="0" />

                    <Button
                        android:id="@+id/btn_guess"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:text="@string/btn_guess_label" />

                </GridLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_restart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="restart"
                        android:text="@string/btn_restart_label" />

                    <Button
                        android:id="@+id/btn_send"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:onClick="send"
                        android:text="@string/btn_send_label" />

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:onClick="save"
                        android:text="@string/btn_save_label" />
                </LinearLayout>

            </android.widget.LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>